# IDTool

./: .gitignore  MIGRATION_SUMMARY.md  README.md  UV_GUIDE.md  db_config.txt  main.py  pyproject.toml  rebuild_complete_database.py  rebuild_database.py  rebuild_db.sh  requirements.txt  run_idtool.sh  schema_report_test_20250708_143929.json  setup_uv.py  test_final_count.py
parcel_filter/config/: settings.py
parcel_filter/core/: db_utils.py  filter.py  map_viewer.py  mcda_ranking.py  mco_ranking.py  ranking.py  version.py
parcel_filter/tests/: conftest.py  test_filter.py  test_ranking.py  test_version.py
parcel_filter/utils/: convert.py  logging.py
