[project]
name = "idtool"
version = "0.1.0"
description = "Geospatial parcel filtering and analysis tool"
requires-python = ">=3.11,<3.12"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.14.0",
    "geopandas>=0.13.0",
    "numpy<1.24.0",
    "pandas>=2.0.0",
    "shapely>=2.0.0",
    "requests==2.31.0",
    "pyarrow==14.0.0",
    "fiona==1.9.4",
    "matplotlib>=3.7.0",
    "folium>=0.14.0",
    "branca>=0.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]
